--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <pre> <h2>
-<img src="c:\Users\suhani\Documents\Desktop\20231015_144241.jpg" height="20%" width="10%">
+<img src="20231015_144241.jpg" height="20%" width="10%">
 SUHANI P MADAMMANAVAR 
 <hr></h2><h3>
 Gourishankar nagar near gourrishankar temple Ranebennur,Haveri.581115 
